RESOLVED FIXED 93425
[Shadow] Stop 'load' and 'error' events at shadow boundaries
https://bugs.webkit.org/show_bug.cgi?id=93425
Summary [Shadow] Stop 'load' and 'error' events at shadow boundaries
Hayato Ito
Reported 2012-08-07 19:22:39 PDT
Attachments
WIP. Breaks existing layout tests (3.84 KB, patch)
2012-08-07 22:21 PDT, Hayato Ito
no flags
stop load and error events (4.28 KB, patch)
2012-08-15 18:24 PDT, Hayato Ito
no flags
Hayato Ito
Comment 1 2012-08-07 20:48:48 PDT
I've added a comment to the spec bug since it breaks some layout tests.
Hayato Ito
Comment 2 2012-08-07 22:21:59 PDT
Created attachment 157112 [details] WIP. Breaks existing layout tests
Hayato Ito
Comment 3 2012-08-15 18:24:22 PDT
Created attachment 158678 [details] stop load and error events
Hayato Ito
Comment 4 2012-08-15 18:26:21 PDT
A bug 93920 was resolved. Now we can stop 'load' and 'error' events at shadow boundaries as the spec says.
WebKit Review Bot
Comment 5 2012-08-15 21:51:29 PDT
Comment on attachment 158678 [details] stop load and error events Clearing flags on attachment: 158678 Committed r125744: <http://trac.webkit.org/changeset/125744>
WebKit Review Bot
Comment 6 2012-08-15 21:51:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.