[Shadow] Stop 'load' and 'error' events at shadow boundaries https://bugs.webkit.org/show_bug.cgi?id=93425

Reviewed by Dimitri Glazkov.

Source/WebCore:

The shadow DOM spec has added these events as 'always-be-stopped' events at shadow boundaries.
http://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html#events-that-are-always-stopped

Test: fast/dom/shadow/events-stopped-at-shadow-boundary.html

* dom/EventDispatcher.cpp:
(WebCore::EventDispatcher::determineDispatchBehavior):

LayoutTests:

* fast/dom/shadow/events-stopped-at-shadow-boundary-expected.txt:
* fast/dom/shadow/events-stopped-at-shadow-boundary.html:


Canonical link: https://commits.webkit.org/112001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125744 268f45cc-cd09-0410-ab3c-d52691b4dbfc